# drowsiness_detection

./: README.md  eye_model.pth  main.py  pyproject.toml  train.py
latex/: dp_final.bbl  dp_final.bib  dp_final.tex
